logs/Slang/generated/yosys/sva_sva_range.sv.log
name: sva_sva_range
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/sva_range.sv
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/sva_range.sv:5:2: error: language feature not yet supported
	default clocking @(posedge clk); endclocking
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/sva_range.sv:5:18: error: expected identifier
	default clocking @(posedge clk); endclocking
	                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/sva_range.sv:7:2: error: language feature not yet supported
	assert property (
	^~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/sva_range.sv:12:2: error: language feature not yet supported
	assume property (
	^~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/sva_range.sv:15:2: error: language feature not yet supported
	assume property (
	^~~~~~~~~~~~~~~~~
